<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:clickable="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="CADASTRO"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:titleTextColor="#FFFFFF" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbCadastro" />

    <EditText
        android:id="@+id/edtEmailCad"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtSenhaCad"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailCad" />

    <EditText
        android:id="@+id/edtSenhaConfirm"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_passwordConfirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaCad" />

    <EditText
        android:id="@+id/edtCPF"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_cpf"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRG" />

    <EditText
        android:id="@+id/edtRG"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_rg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaConfirm" />

    <Spinner
        android:id="@+id/spEstados"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:entries="@array/estado"
        android:prompt="@string/prompt_estado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCPF" />

    <EditText
        android:id="@+id/edtCidade"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/prompt_cidade"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spEstados"
        app:layout_constraintTop_toBottomOf="@+id/edtCPF" />

    <EditText
        android:id="@+id/edtCEP"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_cep"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCidade" />

    <EditText
        android:id="@+id/edtEnder"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/prompt_end"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCEP" />

    <EditText
        android:id="@+id/edtEndNum"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/prompt_end_num"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtEnder"
        app:layout_constraintTop_toBottomOf="@+id/edtCEP" />

    <TextView
        android:id="@+id/txComprovante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/comprovante"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEnder" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/txComprovante"
        app:layout_constraintTop_toBottomOf="@+id/edtEndNum"
        app:srcCompat="@drawable/clips" />

    <Button
        android:id="@+id/btEnviaCadastro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_cadastrar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txComprovante" />

    <ProgressBar
        android:id="@+id/pbRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEnviaCadastro" />
</androidx.constraintlayout.widget.ConstraintLayout>