<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".Estacao"
    android:tooltipText="Estações">

    <ImageView
        android:id="@+id/backgroundEst"
        android:layout_width="613dp"
        android:layout_height="878dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fundo" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbEstacao"
        android:layout_width="416dp"
        android:layout_height="55dp"
        android:background="#E1D6D6"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:collapseIcon="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/txtEstacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/estacoes_page"
        android:textColor="#434242"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tbEstacao"
        app:layout_constraintEnd_toStartOf="@+id/imgCiclo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMap"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbEstacao"
        app:srcCompat="@drawable/loc" />

    <TextView
        android:id="@+id/txEncontre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/confira_estacao"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMap" />

    <Button
        android:id="@+id/btBairro1"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:text="@string/estacoes_bairro1"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txEncontre" />

    <Button
        android:id="@+id/btBairro2"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:text="@string/estacoes_bairro2"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBairro1" />

    <Button
        android:id="@+id/btBairro3"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:text="@string/estacoes_bairro3"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBairro2" />

    <Button
        android:id="@+id/btBairro4"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:text="@string/estacoes_bairro4"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBairro3" />

    <Button
        android:id="@+id/btBairro5"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:text="@string/estacoes_bairro5"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBairro4" />

    <ImageView
        android:id="@+id/imgCiclo"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginStart="229dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/tbEstacao"
        app:layout_constraintEnd_toEndOf="@+id/tbEstacao"
        app:layout_constraintStart_toStartOf="@+id/tbEstacao"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_ciclo_teste" />

</androidx.constraintlayout.widget.ConstraintLayout>