<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report">

    <Spinner
        android:id="@+id/spProblemas"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginBottom="460dp"
        android:entries="@array/problemas"
        android:prompt="@string/prompt_problemas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txConte"
        android:layout_width="360dp"
        android:layout_height="73dp"
        android:layout_marginTop="108dp"
        android:text="@string/conte_problema"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/spProblemas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbReport"
        android:layout_width="413dp"
        android:layout_height="57dp"
        android:background="@android:color/holo_red_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/txConte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:logo="?attr/actionModeCloseDrawable" />

    <EditText
        android:id="@+id/edtCaixaReport"
        android:layout_width="360dp"
        android:layout_height="89dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Descreva o problema resumidamente"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spProblemas" />

    <TextView
        android:id="@+id/txReportar"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/reportar_tb"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="88dp"
        app:layout_constraintBottom_toBottomOf="@+id/tbReport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tbReport"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@android:drawable/stat_notify_error" />

    <TextView
        android:id="@+id/txEmailContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCaixaReport" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="160dp"
        android:layout_height="59dp"
        android:text="@string/report_enviar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txEmailContato"
        app:layout_constraintVertical_bias="0.167" />

</androidx.constraintlayout.widget.ConstraintLayout>